Fixed broken style-with-button without buttons negative margin

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -693,7 +693,7 @@
         text-align: left;
     }
 
-    &> *:last-child {
+    &> *:last-child:not(:first-child) {
         flex-shrink: 0;
         margin-top: -13px;
 
